2006-11-08  Jakub Steiner <jimmac@ximian.com>

	* stock-tool-foreground-select: update SIOX icon based on feedback
		on the mailing list

2006-11-08  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c
	* plug-ins/script-fu/scheme-wrapper.h
	* plug-ins/script-fu/script-fu-console.c
	* plug-ins/script-fu/script-fu-text-console.c: Removed obsolete
	verbose level code.

	* plug-ins/FractalExplorer/FractalExplorer.c: Added missing default
	value to wvals structure.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: removed dead code.

2006-11-07  Simon Budig  <simon@gimp.org>

	* tools/defcheck.py: provide an exit code indicating if the
	check was passed.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_oper_update):
	simplified.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added context_push() and
	context_pop() methods to the gimp module.

	* plug-ins/pygimp/plug-ins/sphere.py: use them.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c: undef DEBUG_SPEW again.

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_draw):
	don't draw the handles while the rectangle is being moved.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/ts-helloworld.scm: test scripts
	aren't localized, but should still follow the menu guidelines.

2006-11-07  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpdrawtool.[ch] (gimp_draw_tool_draw_corner):
	improved highlighting.
	(gimp_draw_tool_draw_arc_by_anchor): take width and height
	arguments instead of radius_x and radius_y.

	* app/tools/gimpiscissorstool.c
	* app/tools/gimpvectortool.c: slightly increased handle sizes.

	* app/tools/gimpmeasuretool.c: increased size of the end points.

	* app/tools/gimpperspectiveclonetool.c: increased handle size.

	* app/tools/gimprectangletool.c: renamed variables.
